[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.20", features = ["derive"] }
rand = "0.8.5"
random = "0.12.2"
strum = { version = "0.24", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25"
log = "0.4.17"
env_logger = "0.9.0"
log4rs = "1.1.1"
